plugin/testData/annotator/perl/unreachableCode/givenWhenBreakDefault.code
sub test(){
  my $var = 'test';
  given($var){
      'before';
      when('test'){
          'first';
          break;
          '<error descr="Unreachable code">first2</error>';
      }
      'mid';
      default{
          'default';
          break;
          '<error descr="Unreachable code">default2</error>';
      }
      '<error descr="Unreachable code">after</error>';
  }
  'end';
}